--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.2.3",
-        "feather-icons": "^4.29.0",
         "flowbite": "^1.6.6",
+        "sweetalert2": "^11.7.12",
         "vue": "^3.3.4",
+        "vue-feather": "^2.0.0",
         "vue-loader": "^17.2.2",
         "vue-router": "^4.2.2"
     }
