--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^3.3.4",
         "vue-feather": "^2.0.0",
         "vue-loader": "^17.2.2",
-        "vue-router": "^4.2.2"
+        "vue-router": "^4.2.2",
+        "vuex": "^4.0.2"
     }
 }
