--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@jobinsjp/vue3-datatable": "^1.0.15",
         "@vitejs/plugin-vue": "^4.2.3",
         "flowbite": "^1.6.6",
         "lodash": "^4.17.21",
@@ -22,7 +23,7 @@
         "vue-feather": "^2.0.0",
         "vue-loader": "^17.2.2",
         "vue-router": "^4.2.2",
-        "vue-table-dynamic": "^0.4.10",
+        "vue3-easy-data-table": "^1.5.47",
         "vuex": "^4.0.2"
     }
 }
