--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@jobinsjp/vue3-datatable": "^1.0.15",
         "@vitejs/plugin-vue": "^4.2.3",
         "flowbite": "^1.6.6",
+        "laravel-vue-pagination": "^4.1.0",
         "lodash": "^4.17.21",
         "sweetalert2": "^11.7.12",
         "vue": "^3.3.4",
