--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
         "@jobinsjp/vue3-datatable": "^1.0.15",
         "@vitejs/plugin-vue": "^4.2.3",
         "animate.css": "^4.1.1",
+        "crypto-js": "^4.1.1",
         "flowbite": "^1.6.6",
+        "js-cookie": "^3.0.5",
         "laravel-vue-pagination": "^4.1.0",
         "lodash": "^4.17.21",
         "sweetalert2": "^11.7.12",
